[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
core_utils = { path = "../core" }

anyhow = "1.0.91"
rust_decimal = { version = "1.36.0", features = [
    "serde-bincode",
    "serde-with-float",
] }
tracing = "0.1.40"
serde_json = "1.0.140"
tokio = { version = "1.41.0", features = ["full"] }
itertools = "0.14.0"
futures = "0.3.31"
hex = "0.4.3"
axum = "0.8.1"
dutils = "0.1.7"
dotenv = "0.15.0"
tokio-stream = "0.1.16"
axum-streams = { version = "0.20.0", features = ["json"] }
kanal = "0.1.0-pre8"
nintypes = { version = "0.1.23", features = ["bellscoin"] }
validator = { version = "0.20.0", features = ["derive"] }

bellscoin = "0.30.5"
thread-priority = "1.2.0"

parking_lot = "0.12.3"
lazy_static = "1.5.0"

electrs_client = { version = "0.1.0" }