[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
core_utils = { path = "../core" }

anyhow = "1.0.91"
rust_decimal = { version = "1.36.0", features = [
    "serde-bincode",
    "serde-with-float",
] }
serde_json = "1.0.140"
tokio = { version = "1.41.0", features = ["full"] }
itertools = "0.14.0"
futures = "0.3.31"
dutils = "0.1.7"
kanal = "0.1.0-pre8"
serde = { version = "1.0.219", features = ["derive"] }
bellscoin = "0.30.5"
parking_lot = "0.12.3"
lazy_static = "1.5.0"