[package]
name = "blk_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
core_utils = { path = "../core" }
application = { path = "../application" }
node_indexer = { path = "../node-indexer" }

derive_deref = "1.1.1"
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
bellscoin = "0.30.5"
kanal = "0.1.0-pre8"
bellscoincore-rpc = "0.17.3"
anyhow = "1.0.98"
nintondo-dogecoin = "0.30.6"
dutils = "0.1.7"
tokio = "1.44.2"
parking_lot = "0.12.3"
tracing = "0.1.40"
itertools = "0.14.0"
hex = "0.4.3"
jsonrpc-async = "2.0.2"
futures = "0.3.31"
