[package]
name = "electrs_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
core_utils = { path = "../core" }
application = { path = "../application" }


anyhow = "1.0.91"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
serde_json = "1.0.140"
itertools = "0.14.0"
futures = "0.3.31"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
kanal = "0.1.0-pre8"

electrs_client = { version = "0.1.0" }
nintondo-dogecoin = { version = "0.30.6", features = ["serde"] }
dutils = "0.1.7"
