[package]
name = "node_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
core_utils = { path = "../core" }
application = { path = "../application" }

anyhow = "1.0.91"
tracing = "0.1.40"
serde_json = "1.0.132"
bellscoin = { version = "0.30.5", features = ["serde"] }
tokio = { version = "1.43.1", features = ["full"] }
itertools = "0.14.0"
futures = "0.3.31"
dutils = "0.1.7"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
kanal = "0.1.0-pre8"
